--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ body {
 }
 .head {
     display: grid;
-    grid-template-columns: 21% 65% 14%;
+    grid-template-columns: 21% 56% 20%;
     color: #ffc7c7;
     font-family: Inter;
     font-size: 125%;
@@ -43,6 +43,9 @@ body {
     width: 100%;
     height: 100%;
     grid-area: b;
+}
+a {
+    color: #ffc7c7;
 }
 .play_Music {
     width: 100%;
@@ -81,7 +84,22 @@ body {
     grid-template-columns: 35px 36px 50px 100px;
     grid-template-areas: ' button_img . text_menu';
 }
+.button_for_profile {
+    background:none;
+   width: 80px;
+  
+    border: 0px;
+}
+.profile_container{
 
+    width: 100%;
+     display: grid;
+     grid-template-rows: 100%;
+     grid-template-columns: 40% 20%;
+     justify-content: end;
+     flex-direction: row;
+ 
+ }
 .menu_img {
     width: 125%;
     height: 125%;
