--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@ body {
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1440" height="1024" viewBox="0 0 1440 1024" fill="none"><path d="M-10 0H1462V1054H-10V0Z" fill="black"/><path d="M-10 0H1462V1054H-10V0Z" fill="url(%23paint0_linear_40_11)"/><defs><linearGradient id="paint0_linear_40_11" x1="713.5" y1="-21.7685" x2="713.5" y2="1032.23" gradientUnits="userSpaceOnUse"><stop stop-color="%238A3333"/><stop offset="0.9999" stop-color="%23D271C8" stop-opacity="0.0625"/><stop offset="1" stop-color="%238A3381" stop-opacity="0"/></linearGradient></defs></svg>');
     background-size: cover; /* Масштабирует фон */
     background-repeat: no-repeat;
-    
 }
 .body {
     width: 100%;
@@ -17,7 +16,7 @@ body {
     grid-template-areas:
         'a a c'
         'b f c';
-   transition-duration: 0.5s; 
+    transition-duration: 0.5s;
 }
 
 .profile {
@@ -39,6 +38,51 @@ body {
 
     grid-area: a;
 }
+.head_search_container{
+    width: 100%;
+    display: grid;
+    justify-content: end;
+}
+.search_input_head::placeholder {
+  color: rgba(255, 199, 199, 0.70);
+  }
+.search_input_head {
+    
+    color: rgba(255, 199, 199, 0.70);
+    padding-left: 25px;
+    position: absolute;
+    width: 443.366px;
+    height: 54px;
+    flex-shrink: 0;
+    border-radius: 15px;
+    border: 0;
+    background: linear-gradient(
+            180deg,
+            rgba(58, 2, 53, 0.8) 0%,
+            rgba(58, 2, 53, 0.28) 99.99%,
+            rgba(58, 2, 53, 0) 100%
+        ),
+        rgba(0, 0, 0, 0.2);
+}
+.container_search_input_head {
+    position: relative;
+
+    width: 443.366px;
+ height: 54px;
+    
+}
+.search_img_head{
+    width: 36.656px;
+height: 37.385px;
+flex-shrink: 0;
+}
+.search_button_head {
+    margin-top: 2%;
+    margin-left: 85%;
+    background: none;
+    border: 0px;
+    position: absolute;
+}
 .menu {
     width: 100%;
     height: 100%;
@@ -53,7 +97,6 @@ a {
     grid-area: c;
 }
 .main {
-  
     width: 100%;
     height: 100%;
     grid-area: f;
@@ -85,21 +128,19 @@ a {
     grid-template-areas: ' button_img . text_menu';
 }
 .button_for_profile {
-    background:none;
-   width: 80px;
-  
+    background: none;
+    width: 80px;
+
     border: 0px;
 }
-.profile_container{
-
+.profile_container {
     width: 100%;
-     display: grid;
-     grid-template-rows: 100%;
-     grid-template-columns: 40% 20%;
-     justify-content: end;
-     flex-direction: row;
- 
- }
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 40% 20%;
+    justify-content: end;
+    flex-direction: row;
+}
 .menu_img {
     width: 125%;
     height: 125%;
@@ -154,8 +195,7 @@ a {
         rgba(0, 0, 0, 0.31) 130.68%,
         rgba(217, 217, 217, 0) 130.69%
     );
-    transition-duration: 0.5s; 
-
+    transition-duration: 0.5s;
 }
 .img_Play_Music {
     height: 35px;
@@ -353,7 +393,7 @@ a {
     line-height: normal;
     grid-area: autorPage_Head_Autor_Content_Text_info;
 }
-.authorpage_head_author_content_text_info_open{
+.authorpage_head_author_content_text_info_open {
     font-size: 80%;
 }
 .autorPage_Head_Autor_Content_Text {
@@ -413,7 +453,6 @@ a {
     margin-top: 6%;
 }
 .autorPage_Div_Music_Play_Img_Songs {
-   
     margin: 0%;
     width: 45px;
     height: 45px;
@@ -521,10 +560,9 @@ a {
 }
 .body_Players_Music_Open {
     grid-template-columns: 20% 42%;
-   
 }
 .play_Music_Open {
-    transition-duration: 0.5s; 
+    transition-duration: 0.5s;
     display: grid;
     grid-template-rows: 10% 60% 10% 10%;
     grid-template-columns: 100%;
@@ -539,13 +577,13 @@ a {
 }
 .range_Audio_Open {
     margin-left: 5%;
-    transform:rotate(0deg);
+    transform: rotate(0deg);
     margin-top: 0;
     grid-area: range_Audio_Open;
     width: 80%;
     margin-left: 15%;
 }
-.img_Icon_Autorh_InPlayers{
+.img_Icon_Autorh_InPlayers {
     background: none;
     border: 0;
 }
@@ -553,7 +591,6 @@ a {
     width: 80%;
     height: 100px;
     border-radius: 50%;
-    
 }
 
 .img_Icon_Autorh_InPlayers_Open {
@@ -564,17 +601,13 @@ a {
 }
 .buttons_Players_Music_Open {
     margin-left: 44%;
-   
 }
-.player_music_songs_text{
+.player_music_songs_text {
     opacity: 0;
 }
-.img_Icon_Autorh_InPlayers_Img_open{ 
-   height: 300px;
-   
-   
+.img_Icon_Autorh_InPlayers_Img_open {
+    height: 300px;
 }
-.player_music_songs_text_open{
+.player_music_songs_text_open {
     opacity: 1;
-    
 }
