--- a/login.css
+++ b/login.css
@@ -26,8 +26,7 @@ body {
     justify-content: center;
 }
 ::placeholder {
-    position: relative;
-    left: 10px;
+   
     color: #ffc7c7;
 }
 .button :hover {
@@ -37,9 +36,12 @@ body {
 .input_Style {
     color: #ffc7c7;
     width: 469px;
-    height: 63px;
+    height: 63px;   
     flex-shrink: 0;
     border: 0px;
+    font-size: 15px;
+    padding:20px;
+    box-sizing: border-box;
     border-radius: 15px;
     background: linear-gradient(
             180deg,
@@ -52,7 +54,7 @@ body {
 
 .button {
     position: relative;
-    top: -100px;
+    top: -190px;
     border-radius: 5px;
     background: #8a3333;
     color: #ffc7c7;
@@ -73,7 +75,7 @@ button:hover {
 }
 .bottomLine {
     position: relative;
-    bottom: 110px;
+    bottom: 200px;
     background: #ffc7c7;
     width: 540px;
 }
