--- a/main.css
+++ b/main.css
@@ -152,7 +152,7 @@ a {
 }
 .body_menu {
     display: grid;
-
+    padding-top: 10%;
     margin-top: 7%;
 }
 .text_menu {
@@ -225,8 +225,8 @@ a {
     transition-duration: 0.5s;
 }
 .mainPage_Autor_Card_Img {
-    width: 168px;
-    height: 180px;
+    width: 148px;
+    height: 160px;
     flex-shrink: 0;
 }
 .mainPage_autor_Div {
@@ -253,9 +253,9 @@ a {
 .mainPage_Autor_Card_Autor_Name {
     margin: -50px;
     color: none;
-
+    left: 20%;
     font-family: Inter;
-    font-size: 175%;
+    font-size: 15px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -263,7 +263,7 @@ a {
 }
 
 .mainPage_Autor_Card_Img_Button:hover h1 {
-    margin-left: 30%;
+    margin-left: auto;
     position: absolute;
 
     opacity: 1;
@@ -271,8 +271,8 @@ a {
 }
 .mainPage_Autor_Card_Img_Button:hover div {
     position: absolute;
-    width: 168px;
-    height: 180px;
+    width: 148px;
+    height: 160px;
 
     background: rgba(69, 6, 59, 0.5);
 }
@@ -348,7 +348,7 @@ a {
     grid-template-rows: 100%;
     height: 100%;
     width: 100%;
-    padding-left: 0;
+    padding-left: 5%;
 }
 .autorPage_head_autor_Content_img_open {
     height: 70%;
@@ -404,13 +404,14 @@ a {
         'autorPage_Head_Autor_Content_Text_info autorPage_Head_Autor_Content_Text_info';
 }
 .autorPage_Div_Music_Content_line {
-    width: 95%;
-    margin-left: -3%;
+    width: 85%;
+    margin-left: 5%;
     height: 1px;
     background: rgba(255, 199, 199, 0.5);
 }
 .autorPage_Div_Music_Content {
-    padding-top: 1%;
+    margin-top: 5%;
+
     display: flex;
     flex-direction: column;
 }
@@ -647,7 +648,7 @@ a {
 }
 
 @media (max-width: 1300px) {
-    .img_Icon_Autorh_InPlayers_Open{
+    .img_Icon_Autorh_InPlayers_Open {
         width: 300px;
         height: 300px;
     }
@@ -666,6 +667,9 @@ a {
         grid-template-rows: 40px;
         grid-template-columns: 20px 20px 20px 100px;
     }
+    .body_menu {
+        padding-top: 35%;
+    }
     .menu_img {
         width: 20px;
         height: 20px;
@@ -678,7 +682,6 @@ a {
         font-size: 15px;
     }
     .autorPage_Head_Autor_Content_Text_info {
-        
         margin-left: 0%;
     }
     .img_Icon_Autorh_InPlayers_Img {
@@ -695,11 +698,100 @@ a {
         margin: 10px;
     }
     .autorPage_Head_Autor_Content_Text_info {
-        font-size: 12px;}
-    .autorPage_Head_Autor_Content_Text{
-   padding-left: 50px;
+        font-size: 12px;
+    }
+    .autorPage_Head_Autor_Content_Text {
+        padding-left: 50px;
+    }
+    .mainPage_Autor_Card_Img {
+        width: 108px;
+        height: 120px;
+        flex-shrink: 0;
+    }
+    .img_Icon_Autorh_InPlayers_Open {
+        width: 200px;
+        height: 200px;
     }
 }
 @media (max-width: 1100px) {
+    .body_menu {
+        padding-top: 35%;
+    }
+    .mainPage_Autor_Div_For_card {
+        width: 50%;
+        display: grid;
+        grid-template-columns: 0%60% 5% 60%;
+        grid-template-rows: 50% 50%;
+    }
     .autorPage_Head_Autor_Content_Text_info {
-        font-size: 10px;}}
+        font-size: 10px;
+    }
+    .autorPage_Head_Autor_Content_Img {
+        grid-template-columns: 100%;
+        grid-template-rows: 70% 30%;
+    }
+    .autorPage_Head_Autor_Content_Img_Slider {
+        flex-direction: row;
+        margin-top: -5%;
+        padding-left: 5%;
+    }
+    .img_Icon_Autorh_InPlayers_Open {
+        width: 150px;
+        height: 150px;
+    }
+    .line_menu {
+        width: 90%;
+    }
+    .autorPage_Head_Autor_Content_Img_Main {
+        margin-left: 26%;
+    }
+    .autorPage_Head_Autor_Content_Img_Left {
+        margin-left: 10%;
+        width: 55px;
+        height: 55px;
+        margin-top: -5%;
+    }
+    .autorPage_Head_Autor_Content_Img_Rigth {
+        margin-left: 0%;
+        width: 55px;
+        height: 55px;
+        margin-top: -5%;
+    }
+    .autorPage_Head_Autor_Content_Img_Center {
+        border-radius: 250px;
+        width: 80px;
+        height: 80px;
+    }
+    .autorPage_Div_Music_Content {
+        padding-left: 15%;
+    }
+}
+@media (max-width: 800px) {
+    .img_Icon_Autorh_InPlayers_Open {
+        width: 150px;
+        height: 150px;
+    }
+    .mainPage_autor_Div {
+        width: 70%;
+        margin-left: 20%;
+    }
+
+    .mainPage_Autor_Div_For_card {
+        width: 70%;
+        display: grid;
+        grid-template-columns: 0% 60% 5px 60%;
+        grid-template-rows: 50% 50%;
+    }
+}
+@media (max-width: 600px) {
+    .mainPage_autor_Div {
+        width: 70%;
+        margin-left: 30%;
+    }
+    .mainPage_Autor_Div_For_card {
+        margin-left: 0%;
+        display: grid;
+        grid-template-columns: 20% 60%;
+        grid-template-rows: 25% 25% 25% 25%;
+    }
+}
