--- a/main.css
+++ b/main.css
@@ -658,8 +658,8 @@ a {
     }
 
     .profile {
-        width: 50px;
-        height: 50px;
+        width: 30px;
+        height: 30px;
         flex-shrink: 0;
     }
     .menu_item {
@@ -714,7 +714,8 @@ a {
         color: none;
         left: 20%;
         font-family: Inter;
-        font-size: 11px;}
+        font-size: 11px;
+    }
     .mainPage_Autor_Card_Img_Button:hover div {
         width: 108px;
         height: 120px;
@@ -728,7 +729,7 @@ a {
     .body_menu {
         padding-top: 35%;
     }
-    
+
     .autorPage_Head_Autor_Content_Text_info {
         font-size: 10px;
     }
@@ -773,12 +774,13 @@ a {
     }
 }
 @media (max-width: 950px) {
-.mainPage_Autor_Div_For_card {
-    width: 50%;
-    display: grid;
-    grid-template-columns: 0%60% 5% 60%;
-    grid-template-rows: 50% 50%;
-}}
+    .mainPage_Autor_Div_For_card {
+        width: 50%;
+        display: grid;
+        grid-template-columns: 0%60% 5% 60%;
+        grid-template-rows: 50% 50%;
+    }
+}
 @media (max-width: 800px) {
     .img_Icon_Autorh_InPlayers_Open {
         width: 150px;
@@ -796,80 +798,106 @@ a {
         grid-template-rows: 50% 50%;
     }
     .body {
-      
         display: grid;
-        grid-template-columns: 20% 80% ;
+        grid-template-columns: 20% 80%;
         grid-template-rows: 12% 76% 12%;
         grid-template-areas:
             'a a '
             'b f '
             'c c';
-}
-.range_Audio{
-    transform: rotate(0deg);
-  width: 50px;
-  margin-top: 0;
-}
-.img_Icon_Autorh_InPlayers_Img {
-    width: 25px;
-    height: 25px;
-
-}
-.buttons_Players_Music{
-    margin-top: 0;
-}
-.switch_Menu_Song_Img {
-
-    width: 30px;
-    height: 30px;
-}
-.profile {
+    }
+    .range_Audio {
+        transform: rotate(0deg);
+        width: 300px;
+        margin-top: 0;
+    }
+    .img_Icon_Autorh_InPlayers_Img {
+        width: 25px;
+        height: 25px;
+    }
+    .buttons_Players_Music {
+        margin-top: 0;
+    }
+    .switch_Menu_Song_Img {
         width: 30px;
         height: 30px;
     }
-.play_Music{
-    padding: 0;
-    display: grid;
-    grid-template-rows: 100%;
-    grid-template-columns:10% 20% 50% 0 20% ;
-    grid-template-areas:
-    'switch_Menu_Song_Img img_Icon_Autorh_InPlayers buttons_Players_Music range_Audio';
-}
-.profile_container {
-  
-    grid-template-rows: 80%;
-    grid-template-columns: 20% 20%;
+    .profile {
+        width: 30px;
+        height: 30px;
+    }
+    .switch_Menu_Song_Button{
+        margin-top: 30px;
+        grid-area: switch_Menu_Song_Button;
+    }
+    .img_Icon_Autorh_InPlayers{
+        margin-top: 20px;
+        grid-area: img_Icon_Autorh_InPlayers;
+    }
+    .buttons_Players_Music{
+        margin-top: 25px;
+        grid-area: buttons_Players_Music;
+    }
+    .range_Audio{
+        margin-top: 37px;
+        margin-left: 25px;
+        grid-area: range_Audio;
+    }
+    .img_Icon_Autorh_InPlayers_Img{
+        width: 50px;
+        height:50px;
+    }
+    .play_Music {
+      display: grid;
+       grid-template-areas: 
    
-}
-.head {
-    display: grid;
-    grid-template-columns: 21% 50% 20%;}
-.text_for_profile{
-    font-size: 12px;
-}
-.switch_Menu_Song_Button {
-   margin-top: 0px;
-    margin-right: 0px;}
-.play_Music_Open {  
-    justify-content: center;
-    grid-template-areas:
-        'switch_Menu_Song_Img'
-        'img_Icon_Autorh_InPlayers_Open'
-        'buttons_Players_Music'
-        ' range_Audio_Open';
-    z-index: 1;
-    background: red;
-    position: absolute;
-    grid-template-rows: 10% 60% 10% 10%;;
-    grid-template-columns:100%;
-}
-.range_Audio_Open{
-    width: 70%;
-}
-.img_Icon_Autorh_InPlayers_Open{
-    width: 300px;
-    height: 300px;
-}
+       'switch_Menu_Song_Button  img_Icon_Autorh_InPlayers buttons_Players_Music range_Audio';
+     
+       width: 100%;
+      height: 100%;
+        
+        grid-template-rows: 40%;
+        grid-template-columns: 10% 20% 20% 0% 50%;
+    }
+    .profile_container {
+        grid-template-rows: 80%;
+        grid-template-columns: 20% 20%;
+    }
+    .head {
+        display: grid;
+        grid-template-columns: 21% 45% 20%;
+    }
+    .text_for_profile {
+        font-size: 12px;
+    }
+    .switch_Menu_Song_Button{
+        margin-top: 20px;
+    }
+    .switch_Menu_Song_Button {
+     
+       
+        margin-right: 0px;
+    }
+    .play_Music_Open {
+        justify-content: center;
+        grid-template-areas:
+            'switch_Menu_Song_Img'
+            'img_Icon_Autorh_InPlayers_Open'
+            'buttons_Players_Music'
+            ' range_Audio_Open';
+        z-index: 1;
+        background: red;
+        position: absolute;
+        grid-template-rows: 10% 60% 10% 10%;
+        grid-template-columns: 100%;
+    }
+    .range_Audio_Open {
+        width: 70%;
+    }
+    .img_Icon_Autorh_InPlayers_Open {
+        width: 300px;
+        height: 300px;
+    }
 }
 @media (max-width: 600px) {
     .mainPage_autor_Div {
