--- a/login.css
+++ b/login.css
@@ -9,6 +9,11 @@ body {
 }
 .account {
 }
+.containerError{
+    position: absolute;
+    color: #ffc7c7;
+    top: 600px;
+}
 .main {
     height: 100vh;
     width: 100vw;
