--- a/regist.css
+++ b/regist.css
@@ -105,7 +105,7 @@ margin-bottom:10px;
 }
 .acount{
   color: #FFC7C7;
-  text-decoration: none;
+  text-decoration: underline;
 
 }
 .acount:hover{
