--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     background-repeat: no-repeat;
 }
 .body {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     display: grid;
     grid-template-columns: 20% 71% 9%;
