--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 }
 .body {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     display: grid;
     grid-template-columns: 20% 71% 9%;
     grid-template-rows: 14% 86%;
