--- a/main.css
+++ b/main.css
@@ -1052,7 +1052,7 @@ a {
     }
     .autorPage_Div_Music_Content_Music_Play_Img {
         margin-left: -5vw;
-        width: 10px;
+        width: 15px;
         height: 15px;
     }
     .autorPage_Div_Music_Content_Music_Play_Button {
@@ -1063,16 +1063,16 @@ a {
         display: grid;
         grid-template-rows: 100%;
         margin-left: -2vw;
-        height: 35px;
-        width: 65vw;
+        height: 37px;
+        width: 70vw;
       
         background: rgba(138, 51, 51, 0.3);
     }
     .autorPage_Div_Music_Play_Img_Songs {
         margin-top: 0.25vh;
         margin-left: -5vw;
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
     }
     .autorPage_Head_Autor_Content_Img_Slider {
     }
@@ -1099,6 +1099,7 @@ a {
         font-size: 5px;
         margin-top: 0px;
         height: 0;
+       
         padding-top: 0;
         height: 0px;
     }
@@ -1112,13 +1113,13 @@ a {
         grid-template-columns: 20% 40%;
     }
     .autorPage_Div_Music_Play_Like_Num {
-        margin-left: 10px;
+      width: 0px;
         font-size: 8px;
         margin-top: 4px;
         height: 100%;
     }
     .autorPage_Div_Music_Play_Like {
-        margin-left: -30px;
+  
         width: 15px;
         height: 15px;
     }
@@ -1126,7 +1127,7 @@ a {
         width: 0;
     }
     .autorPage_Div_Music_Content_Music_Autor_Music{
-        width: 0px;
+        width: auto;
     }
 }
 .autorPage_Div_Music_Play_Like_Num {
@@ -1177,8 +1178,7 @@ a {
         grid-template-columns: 100%;
     }
     .autorPage_Div_Music_Play_Like_Div{
-        padding-left: 50px;
-        margin-left: -50px;
+        
         width: 0px;
     }
 }
