--- a/main.css
+++ b/main.css
@@ -906,10 +906,10 @@ a {
         height: 50px;
     }
     .play_Music {
-        position: sticky;
+      position: fixed;
         display: grid;
         grid-template-areas: 'switch_Menu_Song_Button  img_Icon_Autorh_InPlayers buttons_Players_Music range_Audio';
-
+  top: 100vw;
         width: 100%;
         height: 100%;
 
