--- a/main.css
+++ b/main.css
@@ -905,6 +905,7 @@ a {
         width: 50px;
         height: 50px;
     }
+   
     .play_Music {
       position: fixed;
         display: grid;
@@ -962,6 +963,9 @@ a {
     }
 }
 @media (max-width: 600px) {
+    .head{
+        position: sticky;
+    }
     .mainPage_autor_Div {
         width: 70%;
         margin-left: 30%;
