--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@ body {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: 20vw 71vw 9vw;
-    grid-template-rows: 14% 86;
+    grid-template-columns: 20vh 71vh 9vh;
+    grid-template-rows: 14% 86%;
     grid-template-areas:
         'a a c'
         'b f c';
@@ -910,7 +910,7 @@ a {
       position: sticky;
         display: grid;
         grid-template-areas: 'switch_Menu_Song_Button  img_Icon_Autorh_InPlayers buttons_Players_Music range_Audio';
-
+  top: 170vw;
         width: 100%;
         height: 100%;
 
