--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: 20vh 71vh 9vh;
+    grid-template-columns: 20% 71% 9%;
     grid-template-rows: 14% 86%;
     grid-template-areas:
         'a a c'
