--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
    
     display: inline-block; 
     height: 100vh;
-    overflow-y: scroll;
+    overflow: auto;
 }
 .body {
     width: 100vw;
@@ -916,9 +916,9 @@ a {
         position: fixed;
         display: grid;
         grid-template-areas: 'switch_Menu_Song_Button  img_Icon_Autorh_InPlayers buttons_Players_Music range_Audio';
-  top: 160vw;
+  top: 80vh;
         width: 100%;
-        height: 100%;
+        height: 10vh;
 
         grid-template-rows: 40%;
         grid-template-columns: 0% 20% 20% 0% 50%;
