--- a/main.css
+++ b/main.css
@@ -30,7 +30,8 @@ body {
     height: 56px;
     flex-shrink: 0;
 }
-.head {
+.head {    
+   
     display: grid;
     grid-template-columns: 21% 56% 20%;
     color: #ffc7c7;
@@ -39,9 +40,10 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    width: 100%;
-    height: 100%;
-
+    position: fixed;
+    width: 90%;
+  height: 15%;
+ 
     grid-area: a;
 }
 .head_search_container {
@@ -975,7 +977,7 @@ a {
 @media (max-width: 600px) {
     .head{ 
        
-        position: sticky;
+        position: fixed;
     }
     .autorPage_Head_Autor_Content_Img_Main{
         width: 130px;
