--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ body {
     flex-shrink: 0;
 }
 .head {    
-   
+     z-index: 1;
     display: grid;
     grid-template-columns: 21% 56% 20%;
     color: #ffc7c7;
