--- a/main.css
+++ b/main.css
@@ -866,7 +866,7 @@ a {
     .body {
         display: grid;
         grid-template-columns: 20% 80%;
-        grid-template-rows: 12% 71% ;
+        grid-template-rows: 12% 88% ;
         grid-template-areas:
             'a a '
             'b f '
@@ -915,10 +915,10 @@ a {
     }
    
     .play_Music {
-        position: sticky;
+        position: fixed;
         display: grid;
         grid-template-areas: 'switch_Menu_Song_Button  img_Icon_Autorh_InPlayers buttons_Players_Music range_Audio';
-
+  top: 80vh;
         width: 100%;
         height: 10vh;
 
